<resources>
    <string name="app_name">SubmissionJetpackCompose</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_favorite">Favorite</string>
    <string name="desc_home">home_page</string>
    <string name="desc_about">about_page</string>
    <string name="desc_favorite">favorite_page</string>
    <string name="search_food">Search Food</string>
    <string name="add_fav">Add to Fav</string>
    <string name="remove_fav">Remove fav</string>
    <string name="back">Back</string>
    <string name="empty_favorite">Favorite is empty</string>
    <string name="empty_data">Data is empty</string>
    <string name="favorite">Favorite Food</string>
    <string name="myname">Dwi Mega Hutami</string>
    <string name="mymail">dwimegah.dm@gmail.com</string>
</resources>