...
            onClick = navigateBack,
            modifier = Modifier
                .padding(start = 16.dp, top = 16.dp)
                .align(Alignment.TopStart)
                .clip(CircleShape)
                .size(40.dp)
                .testTag("backHome")
                .background(Color.White)
        ) {
            Icon(
                imageVector = Icons.Default.ArrowBack,
                contentDescription = stringResource(R.string.back),
            )
...
            modifier = Modifier
                .padding(end = 16.dp, top = 16.dp)
                .align(Alignment.TopEnd)
                .clip(CircleShape)
                .size(40.dp)
                .background(Color.White)
                .testTag("favButton")
        ) {
            Icon(
                imageVector = if (isClicked) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                contentDescription = if (isClicked) stringResource(R.string.remove_fav) else stringResource(R.string.add_fav),
            )
        }
...
