...
) {
    Box(modifier = modifier) {
        val listState = rememberLazyListState()

        LazyColumn (
            state = listState,
            modifier = Modifier.testTag("foodList")
        ) {
            item {
                SearchBar(
                    query = query,
                    onQueryChange = onQueryChange,
                    modifier = Modifier.background(MaterialTheme.colorScheme.primary)
...
                }
            }
            else {
                item {
                    Text(
                        text = stringResource(id = R.string.empty_data),
                        modifier = Modifier.testTag("emptyText")
                    )
                }
            }
        }
    }
}
...
