...
                }
            }
            else {
                item {
                    Text(
                        text = stringResource(id = R.string.empty_favorite),
                        modifier = Modifier.testTag("emptyFav").padding(8.dp)
                    )
                }
            }
        }
    }
}
...
